# olas-predict-benchmark

./: .env.example  .gitignore  .gitmodules  README.md
benchmark/: pyproject.toml  results.csv  summary.csv
benchmark/benchmark/: run_allocation.py  run_benchmark.py  run_benchmark_mechx.py  run_marketclosing.py  utils.py
benchmark/benchmark/scripts/: fetch-binance-data.py  write_summary.py
benchmark/nbs/: 0. download_dataset.ipynb  generated_new_ranking_csv.ipynb  refined_autocast_dataset.ipynb  refined_autocast_dataset_v2.ipynb  test_new_tools.ipynb
benchmark/results/: results.csv  results_240118093414.csv  results_240118193603.csv  results_240118193733.csv  results_240118193908.csv  results_240118194017.csv  results_240118194300.csv  results_240118210610.csv  results_240802162451.csv  summary.csv  summary_240118093414.csv  summary_240118193603.csv  summary_240118193733.csv  summary_240118194017.csv  summary_240118194300.csv  summary_240118210610.csv  summary_240118211404.csv  summary_240802162451.csv
nbs/: 0. download_dataset.ipynb  refined_autocast_dataset.ipynb  understanding_dataset.ipynb
tools/prediction_request/: pyproject.toml
tools/prediction_request/prediction_request/: prediction_request.py  tool.py
tools/prediction_request_claude/: pyproject.toml
tools/prediction_request_claude/prediction_request_claude/: prediction_request_claude.py
tools/prediction_request_sme/: pyproject.toml
tools/prediction_request_sme/prediction_request_sme/: prediction_request_sme.py  tool.py
