[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.0"
python-dotenv = "^0.17.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"
huggingface-hub = "^0.20.3"
mech = { path = "./mech", develop = true }
sentence-transformers = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
