[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.0"
python-dotenv = "^0.17.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"
ruff = "^0.1.13"
tiktoken = "^0.5.1"
huggingface-hub = "^0.20.3"
mech = { path = "./mech", develop = true }
pypdf2 = "^3.0.1"
readability-lxml = "^0.8.1"
html2text = "^2020.1.16"
docstring-parser = "^0.15"
faiss-cpu = "^1.7.4"
setuptools = "^69.2.0"
# mech-client = "^0.2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
